# Medusa

./: Dockerfile  LICENSE  MEDUSA4_plan.md  README.md  UI_DESIGN.md  __init__.py  blog.md  client.py  data_quality_issues.md  data_quality_score.py  eval_grpo_olist.py  grader.py  inference.py  inference_fair.py  inference_ppo.py  inference_ppo_robust.py  inference_rule_based.py  medusa_prompts.py  models.py  openenv.yaml  operators.py  pyproject.toml  recover_checkpoint.txt  recover_grpo_logs.py  rewards.py  run_data_quality_scores.sh  run_episode.py  sb3_due_diligence.py  scenarios.py  sft_dataset.jsonl  smoke_test.py  tasks.py  test_golden_path.py  test_random_dataset.py  train_ppo.py  train_ppo_robust.py  train_ppo_robust_v2.py  train_sft.py  train_smoke_test.py  training_pipeline.ipynb
checkpoints/: eval_log.csv  ppo_best.pt  ppo_medusa_0200.pt  ppo_medusa_0300.pt  ppo_medusa_0400.pt  ppo_medusa_0500.pt  ppo_medusa_0700.pt  ppo_medusa_0800.pt  ppo_medusa_0900.pt  ppo_medusa_1000.pt
checkpoints_v2/: eval_log.csv  ppo_best.pt  ppo_medusa_0100.pt  ppo_medusa_0600.pt  ppo_medusa_0700.pt  ppo_medusa_0800.pt  ppo_medusa_0900.pt  ppo_medusa_1000.pt  ppo_medusa_1100.pt
checkpoints_v3/: eval_log.csv  ppo_best.pt  ppo_medusa_0100.pt  ppo_medusa_0200.pt  ppo_medusa_0300.pt  ppo_medusa_0400.pt  ppo_medusa_0500.pt  ppo_medusa_0600.pt  ppo_medusa_0700.pt  ppo_medusa_0800.pt  ppo_medusa_0900.pt  ppo_medusa_1000.pt  ppo_medusa_1100.pt  ppo_medusa_1200.pt  ppo_medusa_1300.pt  ppo_medusa_1400.pt  ppo_medusa_1500.pt
checkpoints_v4/: eval_log.csv  ppo_best.pt  ppo_medusa_0100.pt  (+19 more)
(+175 files in other folders)
